--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,24 @@ body {
     margin-top: 0px !important;
 }
 
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.subContainer {
+    width:auto;
+    background-color: #fff;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px #00000021;
+}
+
+.hiden-div {
+    display: none;
+}
+
 hr {
     border: none;
     border-top: 3px dotted #eeecec;
@@ -59,23 +77,6 @@ ul {
     margin-top: 30px;
 }
 
-.hiden-div {
-    display: none;
-}
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-.subContainer {
-    width:auto;
-    background-color: #fff;
-    margin: 20px auto;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 5px 10px #00000021;
-}
-
 .btn {
     font-size: 1.1rem;
     padding: 15px 40px;
@@ -114,9 +115,9 @@ ul {
 
 .treble-btn button {
     font-size: 1rem;
-    padding: 5px 30px 6px;
+    padding: 15px 30px;
     width: 100%;
-    margin: 10px 0 ;
+    margin: 30px 0 ;
     border: transparent;
     background-color: transparent;
     cursor: pointer;
@@ -332,5 +333,10 @@ ul {
     }
     .treble-btn button {
         width: 150px;
+    }
+}
+@media (min-width: 1080px) {
+    .container {
+        width: 855px;
     }
 }
